<resources>
    <string name="app_name">PopularLibraries</string>
    <string name="text">text</string>
    <string name="primary">primary</string>
    <string name="secondary">secondary</string>
    <string name="low">low</string>
    <string name="_0">0</string>
    <string name="some_text">some text</string>
    <string name="activity">Activity</string>
    <string name="convert">Convert</string>
    <string name="image">image</string>
    <string name="pick_image">Pick image</string>
    <string name="picture_is_not_avalible">нет изображения для конвертации</string>
    <string name="user_avatar">user avatar</string>
    <string name="user_repositories">User repositories:</string>
    <string name="from_network">From network</string>
    <string name="from_database">From database</string>
</resources>