<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/primary_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"/>

    <Button
        android:id="@+id/primary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primary"/>

    <TextView
        android:id="@+id/secondary_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"/>

    <Button
        android:id="@+id/secondary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondary"/>

    <TextView
        android:id="@+id/low_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"/>

    <Button
        android:id="@+id/low_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"/>


</LinearLayout>